--- a/style.css
+++ b/style.css
@@ -5,7 +5,14 @@
     font-family:'Poppins',sans-serif;
 }
 
-body {
+body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    background: url("Assets/back.jpg") center center / cover no-repeat fixed;
+}
+{
     background:black;
     color:white;
     overflow-x:hidden;
@@ -153,3 +160,4 @@ button:hover {
 #unlock button {
     width: 100%;
 }
+
